middlewareinventory-tutorial/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 3app-ingress
  labels:
    app: my-docker-apps
  annotations:
spec:
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: app1
            port: 
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service: 
            name: app2
            port: 
              number: 8080
      - path: /v3
        pathType: Prefix
        backend:
          service: 
            name: app3
            port: 
              number: 8080
